<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBackground"
    tools:context=".MainActivity">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="#3F51B5"
            android:text="@string/register_form_text"/>
        <EditText
            android:id="@+id/firstname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/firstname"/>
        <EditText
            android:id="@+id/lastname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/lastname"/>
        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/birthday_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_marginTop="20dp"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/birthday"/>
        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/occupation_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/occupation"/>
        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="500"
            android:maxLines="4"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/description"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/password_again_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="#8601AF"
            android:textColorHint="#8601AF"
            android:hint="@string/password_again"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:background="#0000ff"
            android:text="@string/submit"
            android:onClick="onClick"/>

    </LinearLayout>
    </LinearLayout>

</ScrollView>

<!--</android.support.design.widget.CoordinatorLayout>-->