...
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp">

</TextView>

<TextView
android:id="@+id/p_description"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/p_desription"
android:textColor="#8601AF"
android:textStyle="bold"
android:layout_marginBottom="20dp"
...
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:gravity="end">

<Button
android:id="@+id/goback_button"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="10dp"
android:paddingBottom="10dp"
android:layout_marginTop="20dp"
android:gravity="center"
...
