<resources>
    <string name="app_name">Dating App</string>
    <string name="hello_world">Hello World!</string>
    <string name="log_out">Log Out</string>
    <string name="say_my_name">App by: Smith, Jeremiah, 04/24/2018</string>
    <string name="click_me">Click Me</string>
    <string name="thank_you">Thank you for using this App-</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="username">Username</string>
    <string name="register_form_text">Welcome to the dating app! Please fill out for below to register a profile.</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="password_again">Re-enter Password</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
    <string name="passwords_must_be_the_same">Password and password again field must be the same</string>
    <string name="here_is_values">Here is values: %1$s</string>
    <string name="must_be_18">Must be at least 18 years of age to register</string>
    <string name="goback">Go Back</string>
    <string name="occupation">Occupation</string>
    <string name="description">Description</string>
    <string name="welcome">Welcome to the dating app: </string>
    <string name="p_age">Age- </string>
    <string name="p_occupation">Occupation- </string>
    <string name="p_desription">Description- </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_matches_fragment">Matches Fragment Soon to Come</string>
    <string name="hello_blank_settings_fragment">Settings Fragment Soon to Come</string>
    <string name="application_settings">Dating App Settings</string>
    <string name="time_reminder">Matches Time Reminder Alert</string>
    <string name="max_distance">Max Distance In Miles</string>
    <string name="gender">Gender</string>
    <string name="private_public">Turn Privacy Settings On/Off</string>
    <string name="min_age">Age Minimum</string>
    <string name="max_age">Age Maximum</string>
    <string name="min_age_matches">Preferred Age Minimum of Matches</string>
    <string name="max_age_matches">Preferred Age Maximum of Matches</string>
    <string name="update_settings">Update</string>
    <string name="specify_gender">Specify Gender</string>
</resources>
